memperbaiki component, profile, room, navbar dan memasukkan avatar image profile

--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -10,8 +10,8 @@
           <img src="{{ message.user.avatar.url }}" />
         </div>
         <p>
-          @{{ user.username }}
-          <span>{{ message.created|timesince }} yang lalu</span>
+          @{{ message.user.username }}
+          <span>{{ message.created|timesince }} ang lalu</span>
         </p>
       </a>
 
