--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -109,7 +109,7 @@
                 {% for user in participants %}
                 <a href="{% url 'user-profile' user.id %}" class="participant">
                     <div class="avatar avatar--medium">
-                        <img src="{{ room.host.avatar.url }}" />
+                        <img src="{{ user.avatar.url }}" />
                     </div>
                     <p>
                         {{ user.username }}
