memperbaiki activity, dan login

--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -11,7 +11,7 @@
         </div>
         <p>
           @{{ message.user.username }}
-          <span>{{ message.created|timesince }} ang lalu</span>
+          <span>{{ message.created|timesince }} yang lalu</span>
         </p>
       </a>
 
