--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -1,6 +1,6 @@
 <div class="activities">
   <div class="activities__header">
-    <h2>Aktitas Terbaru</h2>
+    <h2>Aktivitas Terbaru</h2>
   </div>
   {% for message in room_messages %}
   <div class="activities__box">
