--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -59,6 +59,8 @@
                         </a>
                     </div>
                     <span class="room__topics">{{ room.topic }}</span>
+                    <br />
+                    <span class="room__description">{{ room.description }}</span>
                 </div>
                 <div class="room__conversation">
                     <div class="threads scroll">
@@ -121,7 +123,7 @@
         </div>
         <!--  End -->
     </div>
-    <br>
+    <br />
 </main>
 <script src="script.js"></script>
 {% endblock content %}
